--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav class="navbar">
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="quotes.html" class="active">Quotes</a></li>
-            <li><a href="index.html" class="active">Kontak</a></li>
+            <li><a href="quotes.html">Quotes</a></li>
+            <li><a href="index.html">Kontak</a></li>
         </ul>
     </nav>
 
